--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -23,7 +23,7 @@
 html {
   font-family: var(--font-family-serif);
   font-weight: 400;
-  font-size: 17px;
+  font-size: 18px;
   line-height: 1.4;
   transition: color 700ms ease-in;
 }
@@ -34,14 +34,14 @@ html {
   text-shadow: 2px 2px 2px var(--color-white);
 }
 h1 { 
-  font-size: 4rem;
+  font-size: 3.875rem;
   margin-bottom: 1.2vw;
   line-height: .98;
   font-family: var(--font-family-headline);
   font-weight: 600;
 }
 h2 { 
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   margin-bottom: calc(4px + .8vw);
   line-height: 1.2;
   letter-spacing: .05rem;
@@ -49,7 +49,7 @@ h2 {
   font-weight: 600;
 }
 h4 { 
-  font-size: 1.2rem;
+  font-size: 1.15rem;
   margin-bottom: calc(4px + .8vw);
   line-height: 1.4;
   letter-spacing: 0rem;
@@ -57,7 +57,7 @@ h4 {
   font-weight: 600;
 }
 h5 { 
-  font-size: .75rem;
+  font-size: .675rem;
   margin-bottom: calc(4px + .8vw);
   line-height: 1;
   letter-spacing: .05rem;
@@ -66,7 +66,7 @@ h5 {
   font-weight: 600;
 }
 h6 { 
-  font-size: .9rem;
+  font-size: .875rem;
   margin-bottom: calc(4px + .8vw);
   letter-spacing: .05rem;
   line-height: 1.1;
@@ -75,13 +75,13 @@ h6 {
 }
 @media screen and (max-width: 39.9999rem) {
   html {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.4;
   }
 }
 @media screen and (min-width: 40rem) and (max-width: 59.9999rem) {
   html {
-    font-size: 16px;
+    font-size: 17px;
     line-height: 1.4;
   }
 }
@@ -490,7 +490,7 @@ input[type="submit"] {
   font-family: var(--font-family-headline-wide);
   max-width: 360px;
 }
-.article-text figure figcaption, .article-footnotes p, .in-use figure figcaption {
+.article-text figure figcaption, .article-footnotes ol, .in-use figure figcaption {
   font-weight: 600;
   letter-spacing: 0.065em;
   font-size: .75rem;
