--- a/assets/css/index-min.css
+++ b/assets/css/index-min.css
@@ -812,6 +812,7 @@ hr {
   transform: translateY(-35%);
   left: 0px;
   font-family: var(--font-family-sans);
+  font-size: .8rem;
   width: 100%;
 }
 .shopify-buy-cart-wrapper {
