--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -299,11 +299,31 @@ input[type="submit"] {
   box-sizing: border-box;
   cursor: pointer;
 }
-#mce-responses .response {
+#mc-embedded-subscribe-form .error-message, .mc-status {
   font-family: var(--font-family-sans);
   font-weight: 600;
   letter-spacing: .06em;
   font-size: .875rem;
+}
+.mc-status {
+  display: none;
+}
+#mc-embedded-subscribe-form .error-message, .mc-status {
+  padding: var(--padding-sm);
+  background: var(--color-white);
+  border-radius: var(--border-radius);
+  margin-bottom: var(--margin-s);
+}
+#mc-embedded-subscribe-form .mc-status.error-message {
+  display: block;
+  background: var(--color-coral);
+}
+#mc-embedded-subscribe-form .mc-status.success-message {
+  display: block;
+  background: var(--color-yellow);
+}
+.error {
+	border: var(--border) var(--color-coral);
 }
 
 .nav {
