--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -405,7 +405,6 @@ input[type="submit"] {
 .grid-locked > .column {
   grid-column: span var(--columns);
 }
-
 .autogrid {
   --gutter: 3rem;
   --min: 10rem;
@@ -413,6 +412,13 @@ input[type="submit"] {
   grid-gap: var(--gutter);
   grid-template-columns: repeat(auto-fit, minmax(var(--min), 1fr));
   grid-auto-flow: dense;
+}
+.grid > [style^='--aspect-ratio']::before {
+  content: "";
+  display: inline-block;
+  width: 0px;
+  height: 0;
+  padding-bottom: calc(100% / (var(--aspect-ratio)));
 }
 
 .text-center {
@@ -998,7 +1004,6 @@ input:checked + svg {
 }
 .page-home .type-preview:hover .font-details {
   color: var(--color-grey);
-  
 }
 .full-width-text {
   margin-top: -.75vw;
@@ -1009,6 +1014,7 @@ input:checked + svg {
   line-height: 1.05;
   
 }
+/* Typeface */
 
 /* Article */
 .note {
@@ -1060,7 +1066,41 @@ contact .h1 {
   max-height: 100px;
   width: auto;
 }
-
+/* Glyphs */
+@media screen and (max-width: 829px) {
+  .glyphs-grid {
+    grid-template-columns: 1fr;
+    grid-template-columns: repeat(12, 1fr);
+    font-size: calc(16px + 1vw);
+  }
+}
+@media screen and (min-width: 829px) {
+  .glyphs-grid {
+    grid-template-columns: 1fr;
+    grid-template-columns: repeat(16, 1fr);
+    font-size: 28px;
+  }
+}
+.glyphs-grid {
+  align-items: center;
+  justify-content: center;
+}
+.glyphs-grid > div {
+  margin-left: -2px;
+  margin-bottom: -2px;
+  border: var(--border) var(--color-grey);
+  text-align: center;
+  line-height: 0;
+  position: relative;
+}
+.glyphs-grid > div > span {
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0px;
+  width: 100%;
+}
 /* Font */
 @charset "UTF-8";
 .fsjs-skin {
