--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -387,6 +387,9 @@ input[type="submit"] {
 .flex {
   display: flex;
 }
+.flex-grow {
+  flex-grow: 1;
+}
 .grid {
   --columns: 12;
   --gutter: 0rem;
@@ -1014,7 +1017,62 @@ input:checked + svg {
   line-height: 1.05;
   
 }
-/* Typeface */
+/* Toggle */
+.tgl {
+  display: none;
+}
+.tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
+  box-sizing: border-box;
+}
+.tgl::-moz-selection, .tgl:after::-moz-selection, .tgl:before::-moz-selection, .tgl *::-moz-selection, .tgl *:after::-moz-selection, .tgl *:before::-moz-selection, .tgl + .tgl-btn::-moz-selection {
+  background: none;
+}
+.tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
+  background: none;
+}
+.tgl + .tgl-btn {
+  outline: 0;
+  display: block;
+  width: 1.3em;
+  height: .8em;
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
+  position: relative;
+  display: block;
+  content: "";
+  width: 50%;
+  height: 100%;
+}
+.tgl + .tgl-btn:after {
+  left: 0;
+}
+.tgl + .tgl-btn:before {
+  display: none;
+}
+.tgl:checked + .tgl-btn:after {
+  left: 50%;
+}
+
+.tgl-light + .tgl-btn {
+  background: var(--color-grey);
+  border-radius: 2em;
+  padding: 2px;
+  transition: all 0.4s ease;
+}
+.tgl-light + .tgl-btn:after {
+  border-radius: 50%;
+  background: var(--color-white);
+  transition: all 0.2s ease;
+}
+.tgl-light:checked + .tgl-btn {
+  background: var(--color-black);
+}
 
 /* Article */
 .note {
@@ -1079,15 +1137,6 @@ contact .h1 {
     grid-template-columns: 1fr;
     grid-template-columns: repeat(16, 1fr);
     font-size: 28px;
-  }
-  .zoom {
-    transition: transform 500ms; /* Animation */
-    transform-origin: top left;
-  }
-  .zoom:hover {
-    z-index: 1;
-    transform: scale(1.982);
-    border-width: 1px;
   }
 }
 .glyphs-grid {
