--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1018,7 +1018,7 @@ input:checked + svg {
   line-height: 1.05;
   
 }
-/* Toggle */
+/* Feature Toggle */
 .tgl {
   display: none;
 }
@@ -1283,7 +1283,7 @@ contact .h1 {
   background-color: var(--color-white);
   top: 0px;
   left: 100%;
-  height: 140px;
+  max-height: 140px;
   width: 100%;
   overflow-y: scroll;
   display: flex;
