--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1135,6 +1135,9 @@ contact .h1 {
     grid-template-columns: repeat(12, 1fr);
     font-size: calc(16px + 1vw);
   }
+  .preview {
+    display: none;
+  }
 }
 @media screen and (min-width: 829px) {
   .glyphs-grid {
@@ -1142,6 +1145,20 @@ contact .h1 {
     grid-template-columns: repeat(16, 1fr);
     font-size: 28px;
   }
+  .preview-glyphs {
+    grid-template-columns: 1fr;
+    grid-template-columns: 250px 1fr;
+    align-items: start;
+  }
+  .preview {
+    align-self: start;
+    position: sticky;
+    top: 0;
+  }
+}
+.preview .letter {
+  font-size: 250px;
+  line-height: 1.1;
 }
 .glyphs-grid {
   align-items: center;
@@ -1154,6 +1171,10 @@ contact .h1 {
   text-align: center;
   line-height: 0;
   position: relative;
+  cursor: pointer;
+}
+.glyphs-grid > div:hover {
+  background: var(--color-soft-blue);
 }
 .glyphs-grid > div > span {
   display: block;
