--- a/source/css/index.scss
+++ b/source/css/index.scss
@@ -35,6 +35,9 @@
   --font-size-h5: .6rem;
   --font-size-h6: .75rem;
 
+  /* Stable colors */
+  --color-yellow-stable: #FFD138;
+
   /* Default/light theme variables */
   --color-black: #000;
   --color-bg-black: #000;
@@ -64,7 +67,7 @@
   --color-soft-blue: #302F27;
   --color-soft-blue-solid: #1E1E1EFF;
   --color-soft-blue-clear: #00000000;
-  --color-yellow: #302F27;
+  --color-yellow: #24231D;
   --color-tan: #24231D;
   --color-tan-dark: #4E4B3E;
   --color-white-rgb: 0, 0, 0;
@@ -129,6 +132,7 @@ h2, .h2 {
   letter-spacing: .05rem;
   font-family: var(--font-family-headline);
   font-weight: 600;
+  max-width: 47ch;
   text-wrap: balance;
 }
 h4, .h4 { 
@@ -139,7 +143,7 @@ h4, .h4 {
   font-family: var(--font-family-serif-bold);
   font-weight: 600;
 }
-h5 { 
+h5, .h5 { 
   font-size: var(--font-size-h5);
   margin-bottom: var(--margin-sm);
   line-height: 1;
@@ -148,7 +152,7 @@ h5 {
   font-family: var(--font-family-eyebrow);
   font-weight: 600;
 }
-h6 { 
+h6, .h6 { 
   font-size: var(--font-size-h6);
   margin-bottom: var(--margin-sm);
   letter-spacing: .05rem;
@@ -171,12 +175,16 @@ h6 {
 }
 p {
   margin-bottom: var(--margin-md);
+  max-width: 50ch;
 }
-.no-mb {
+.no-mb, .mb-0 {
   margin-bottom: 0px;
 }
 .mb-md {
   margin-bottom: var(--margin-md);
+}
+.hide {
+  display: none;
 }
 .block {
   display: block;
@@ -212,11 +220,9 @@ a.link:hover {
 a.bg-blue {
   display: block;
   box-sizing: border-box;
-  border-bottom: var(--border) var(--color-white);
 }
-
 a.bg-blue:hover {
-  border-bottom: var(--border) var(--color-black);
+  background-image: var(--color-blue-gradient);
 }
 a .hover-show {
   opacity: 0;
@@ -240,18 +246,7 @@ button {
   color: currentColor;
   cursor: pointer;
 }
-.button {
-  display:grid; 
-  width: 100%; 
-  box-sizing:border-box;
-  padding: var(--padding-sm);
-  text-align: center;
-  border-radius: var(--border-radius);
-  background: var(--color-black);
-  color: var(--color-white);
-  min-height: 38px;
-  align-items: center;
-}
+
 strong, b {
   font-weight: 600;
 }
@@ -273,6 +268,9 @@ small {
 }
 .bt-white {
   border-top: var(--border) var(--color-white);
+}
+.bl-white {
+  border-left: var(--border) var(--color-white);
 }
 .fill-black {
   fill: var(--color-black);
@@ -388,10 +386,8 @@ body:has(.nav.scrolled) {
   display: flex;
   text-align: right;
   align-items: center;
-  
 }
 .menu > * {
-  float: left;
   margin-left: calc(3px + 2.5vw);
 }
 .menu .link {
@@ -402,58 +398,108 @@ body:has(.nav.scrolled) {
     max-height: 30px;
   }
   .menu .link {
-    height: 30px;
+    max-height: 30px;
   }
 }
-.menu .link a {
+.link > * {
   border-top: var(--border) transparent;
   border-bottom: var(--border) transparent;
+  cursor: pointer;
 }
-.menu .link a:hover {
+.link > *:hover {
   border-bottom: var(--border) var(--color-grey);
 }
 .menu .link [aria-current] {
   border-bottom: var(--border) var(--color-grey);
 }
 
-.logo path {
-  animation: wave-opacity 7000ms ease-in-out infinite;
+
+/* Filter Nav */
+.nav-filter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: var(--border) var(--color-blue);
+  background: var(--color-tan);
+  gap: var(--margin-md);
+}
+.nav-filter > * {
+  white-space: nowrap;
+}
+.nav-filter .button-group {
+  display: flex;
+  border-radius: 50%;
+}
+.nav-filter .button-group .button-toggle-item .icon {
+  width: 23px;
+  height: 23px;
+}
+.button-toggle-item .button-label {
+  display: none;
 }
 
+.nav-filter .button-group .button-toggle-item {
+  color: var(--color-tan-dark);
+  padding: var(--margin-xs);
+  margin-right: calc(var(--border-width) * -1);
+}
+.nav-filter .button-group .button-toggle-item.active {
+  color: var(--color-black);
+  background: var(--color-blue);
+  cursor: default;
+}
+.nav-filter .button-group .button-toggle-item:hover {
+  color: var(--color-black);
+}
+
+
+.logo path {
+  transform-origin: bottom left;
+  transition: all 300ms ease-in-out;
+  animation: wave-opacity 7000ms ease-in-out infinite;
+}
 .logo:hover path {
-  animation: wave-opacity 1600ms ease-in-out infinite;
+  fill: var(--color-grey);
+  animation: wave-opacity 3500ms ease-in-out infinite;
 }
 
 @keyframes wave-opacity {
-  0% {  opacity: 1; filter: blur(0px); }
-  15% { opacity: 0.75; filter: blur(.5px); }
-  25% { opacity: 1; filter: blur(0px); }
-  35% { opacity: 0.5; filter: blur(1px); }
-  50% { opacity: 1; filter: blur(0px); }
-  100% {  opacity: 1; filter: blur(0px); }
+  0%, 11% {  opacity: 1; filter: blur(0px); transform: skewX(0deg); }
+  15% { opacity: 0.75; filter: blur(.5px); transform: skewX(-5deg); }
+  25% { opacity: 1; filter: blur(0px); transform: skewX(0deg); }
+  35% { opacity: 0.5; filter: blur(1px); transform: skewX(-1deg); }
+  50% { opacity: 1; filter: blur(0px); transform: skewX(0deg); }
+  100% {  opacity: 1; filter: blur(0px); transform: skewX(0deg); }
 }
 
-/* Add sequential delay to each path */
-.logo path:nth-child(1) { animation-delay: 0s; }
+/* Add sequential delay to V */
+.logo path:nth-child(1) { animation-delay: 0.1s; }
 .logo path:nth-child(2) { animation-delay: 0.1s; }
-.logo path:nth-child(3) { animation-delay: 0.2s; }
-.logo path:nth-child(4) { animation-delay: 0.3s; }
-.logo path:nth-child(5) { animation-delay: 0.4s; }
-.logo path:nth-child(6) { animation-delay: 0.5s; }
-.logo path:nth-child(7) { animation-delay: 0.6s; }
-.logo path:nth-child(8) { animation-delay: 0.7s; }
-.logo path:nth-child(9) { animation-delay: 0.8s; }
-.logo path:nth-child(10) { animation-delay: 0.9s; }
-.logo path:nth-child(11) { animation-delay: 1.0s; }
-.logo path:nth-child(12) { animation-delay: 1.1s; }
-.logo path:nth-child(13) { animation-delay: 1.2s; }
-.logo path:nth-child(14) { animation-delay: 1.3s; }
-.logo path:nth-child(15) { animation-delay: 1.4s; }
-.logo path:nth-child(16) { animation-delay: 1.5s; }
-.logo path:nth-child(17) { animation-delay: 1.6s; }
-.logo path:nth-child(18) { animation-delay: 1.7s; }
-.logo path:nth-child(19) { animation-delay: 1.8s; }
-.logo path:nth-child(20) { animation-delay: 1.9s; }
+/* to E */
+.logo path:nth-child(3) { animation-delay: 0.25s; }
+.logo path:nth-child(4) { animation-delay: 0.25s; }
+.logo path:nth-child(5) { animation-delay: 0.25s; }
+/* to R */
+.logo path:nth-child(6) { animation-delay: 0.4s; }
+.logo path:nth-child(7) { animation-delay: 0.4s; }
+.logo path:nth-child(8) { animation-delay: 0.4s; }
+/* to Y */
+.logo path:nth-child(9) { animation-delay: 0.6s; }
+.logo path:nth-child(10) { animation-delay: 0.6s; }
+/* to C */
+.logo path:nth-child(11) { animation-delay: .75s; }
+.logo path:nth-child(12) { animation-delay: .75s; }
+.logo path:nth-child(13) { animation-delay: .75s; }
+/* to O */
+.logo path:nth-child(14) { animation-delay: .9s; }
+.logo path:nth-child(15) { animation-delay: .9s; }
+/* to O */
+.logo path:nth-child(16) { animation-delay: 1.05s; }
+.logo path:nth-child(17) { animation-delay: 1.05s; }
+/* to L */
+.logo path:nth-child(18) { animation-delay: 1.2s; }
+.logo path:nth-child(19) { animation-delay: 1.2s; }
+.logo path:nth-child(20) { animation-delay: 1.2s; }
 
 .social {
   display: flex;
@@ -469,8 +515,29 @@ body:has(.nav.scrolled) {
 .flex {
   display: flex;
 }
+.flex-grow {
+  flex-grow: 1;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.column {
+  flex-direction: column;
+}
+.block {
+  display: block;
+}
 .align-center {
   align-items: center;
+}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.gap-xxs {
+  gap: var(--border-width);
 }
 .gap-sm, .gap-s {
   gap: var(--margin-sm);
@@ -515,11 +582,12 @@ body:has(.nav.scrolled) {
   padding-bottom: calc(100% / (var(--aspect-ratio)));
 }
 
-.text-center {
-  text-align: center;
+.blog-prevnext .article-excerpt {
+  min-width: 120px;
+  grid-column: span 6;
 }
-.text-right {
-  text-align: right;
+.article-header {
+  max-width: 55ch;
 }
 .article-text > p,
 .article-text > ol,
@@ -546,7 +614,8 @@ body:has(.nav.scrolled) {
 }
 .article-text > *:not(a) {
   margin-bottom: var(--margin-md);
-  max-width: 100%;
+  width: 100%;
+  max-width: 75ch;
 }
 .article-text ul > li {
   list-style: disc;
@@ -625,10 +694,9 @@ body:has(.nav.scrolled) {
 .article-text figure~figure {
   margin-bottom: var(--margin-sm);
 }
-.article-text figure figcaption, .article-footnotes, .in-use figure figcaption {
+.article-text figure figcaption, .in-use figure figcaption {
   color: var(--color-grey);
   font-family: var(--font-family-headline-wide);
-  max-width: 360px;
 }
 .article-text figure figcaption, .article-footnotes ol, .in-use figure figcaption {
   font-weight: 600;
@@ -648,13 +716,11 @@ body:has(.nav.scrolled) {
   transition: height 200ms ease-in;
   min-height: 50vh;
 }
- dl > *, dl > * {
-  display: inline-block;
+dl {
+  display: grid;
+  grid-template-columns: minmax(110px, .75fr) minmax(20ch, 2fr);
+  max-width: 50ch;
 }
- dl > dt, dl > dt {
-  min-width: 110px;
-}
-
 hr {
   border: 0;
   background: currentColor;
@@ -797,15 +863,7 @@ hr {
 .rounded-corners-full {
   border-radius: 20px;
 }
-.article-footer {
-}
 
-.article-excerpt header {
-  
-}
-.article-excerpt figure {
-  
-}
 .article-excerpt-title {
   margin-bottom: .25vw;
 
@@ -813,7 +871,12 @@ hr {
 .article-excerpt-date {
   margin-bottom: 0px;
 }
-
+.article-excerpt-sample {
+  line-height: .75;
+  align-self: top;
+  leading-trim: both;
+ text-edge: cap alphabetic;
+}
 .theme-switch-wrapper {
   align-items: center;
 }
@@ -895,16 +958,16 @@ hr {
 
 .store-modal__index-item__button, .store-modal__family-button__button, .store-modal__family__style-button, .cart-additions__expand-button, .store-modal__license-selection__license-button {
   background: var(--color-tan);
-  border: var(--border) var(--color-grey);
+  border: var(--border) var(--color-white);
   margin-top: -2px;
   margin-left: -2px;
   box-shadow: none;
   color: var(--color-grey)
 }
 .store-modal__index-item__button:hover, .store-modal__family-button__button:hover, .store-modal__family__style-button:hover, .cart-additions__expand-button:hover, .store-modal__license-selection__license-button:hover {
-  background: var(--color-white);
-  border: var(--border) var(--color-grey);
-  color: var(--color-black);
+  background: var(--color-blue) !important;
+  color: var(--color-grey) !important;
+  border: var(--border) var(--color-white) !important;
 }
 .store-modal__family__group > button:nth-last-child(3):first-child {
   grid-column: span 2;
@@ -995,12 +1058,20 @@ input:checked + svg {
 .page-home .bb-soft-blue ~ .bb-soft-blue:last-of-type {
   border-bottom: 0px;
 }
+.type-list {
+  background: var(--color-soft-blue);
+  min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  gap: var(--border-width);
+}
 .type-preview {
-  border-top: var(--border) var(--color-white);
   position: relative;
   transition: background 500ms ease-in;
+  box-sizing: border-box;
+  background: var(--color-white);
 }
-.page-home .type-preview .font-details {
+.type-preview .font-details {
   position: absolute;
   padding: var(--padding-sm);
   left: 0px;
@@ -1017,21 +1088,52 @@ input:checked + svg {
     opacity: 0;
   }
 }
-.page-home .type-preview:hover {
+.type-list.list-view .type-preview {
   border-top: var(--border) var(--color-white);
-  opacity: 1;
 }
-.page-home .type-preview:hover .font-details {
+.type-preview:hover .font-details {
   color: var(--color-grey);
 }
-.full-width-text {
+.type-list.list-view .full-width-text {
   margin-top: -.75vw;
   margin-bottom: .75vw;
   text-align: center;
   font-size: 180px; /* Some tweener fallback that doesn't look awful */ 
   font-size: 10.5vw;
   line-height: 1.05;
+  white-space: nowrap;
   
+}
+.type-list.grid-view {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+}
+
+.type-list.grid-view .type-preview {
+  height: 100%;
+  overflow: hidden;
+}
+.type-list.grid-view .type-preview {
+  height: 100%;
+  width: 100%;
+}
+.type-list.grid-view .type-preview h5 {
+  display: none;
+}
+.type-list.grid-view .full-width-text {
+  font-size: 9.5rem;
+  line-height: 1;
+  text-align: center;
+  margin-top: -.09em;
+  margin-bottom: .135em;
+}
+@media screen and (max-width: 580px) {
+  .type-list.grid-view {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+  .type-list.grid-view .full-width-text {
+    font-size: 8.5rem;
+  }
 }
 /* Feature Toggle */
 .font_section--opentype-features-wrapper {
@@ -1099,7 +1201,7 @@ input:checked + svg {
   transition: all 0.2s ease;
 }
 .tgl-light:checked + .tgl-btn {
-  background: var(--color-yellow);
+  background: var(--color-yellow-stable);
 }
 .tgl-light:checked + .tgl-btn:hover {
   background: var(--color-black);
@@ -1151,7 +1253,7 @@ contact .h1 {
   background-image: var(--color-blue-gradient);
 }
 .page-about .main section:last-of-type {
-  background: var(--color-coral);
+  background: var(--color-yellow);
   margin-bottom: 0px;
 }
 .page-about .main section:last-of-type img {
@@ -1351,23 +1453,31 @@ figure:hover {
     min-width: 100%;
   }
 }
-
+.btn {
+  width: auto;
+}
 button.buy-button {
-  border: var(--border) var(--color-white);
-  outline: 0;
-  background: var(--color-black);
-  border-radius: var(--border-radius);
-  color: var(--color-white);
   font-family: var(--font-family-headline);
   font-size: var(--font-size-h3);
   line-height: 1;
   font-weight: 600;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-button.buy-button:hover {
+button.buy-button, .btn {
+  display: flex;
+  gap: var(--margin-sm);
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  padding: var(--margin-sm) var(--margin-md);
+  border: var(--border) var(--color-black);
+  outline: 0;
+  background: var(--color-black);
+  border-radius: var(--border-radius);
+  color: var(--color-white);
+}
+button.buy-button:hover, .btn:hover {
   background: var(--color-white);
   color: var(--color-black);
   border: var(--border) var(--color-grey);
@@ -1376,21 +1486,25 @@ button.buy-button:hover {
 @keyframes loadIn {
   0% {
     opacity: .1;
-    transform: translateY(-10px) scaleY(.25);
+    transform: translateY(-4px) scaleY(.5) skewX(10deg);
     filter: blur(13px);
   }
   33% {
     opacity: .2;
-    transform: translateY(-2px) scaleY(1);
+    transform: translateY(-2px) scaleY(1) skewX(2deg);
   }
   66% {
     opacity: .5;
-    transform: translateY(0) scaleY(1);
+    transform: translateY(0) scaleY(1) skewX(-1deg);
     filter: blur(3px);
+  }
+  90% {
+    filter: blur(1px);
   }
   100% {
     opacity: 1;
     filter: blur(0px);
+    transform: skewX(0deg);
   }
 }
 
@@ -1515,7 +1629,7 @@ button.buy-button:hover {
 }
 
 .type-tester__bullet[data-checked="true"] {
-  color: var(--color-yellow);
+  color: var(--color-yellow-stable);
 }
 
 /* Text Area */
@@ -1550,6 +1664,39 @@ input[type="text"], input[type="email"], input[type="url"], input[type="password
   box-sizing: border-box;
   cursor: pointer;
 }
+::placeholder {
+  color: var(--color-blue);
+}
+.input-select {
+  color:var(--color-black);
+  border: 0px;
+  padding: var(--padding-sm);
+  background: var(--color-white);
+  font-family: var(--font-family-sans);
+  font-weight: 600;
+  letter-spacing: .06em;
+  font-size: var(--font-size-h6);
+  outline: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2214%22%20height%3D%2214%22%20viewBox%3D%220%200%2014%2014%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M2%205L7%209L12%205%22%20stroke%3D%22black%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right .7em top 50%;
+  background-size: .65em auto;
+  padding-right: 2.5em;
+}
+.input-select:hover {
+  background: var(--color-blue);
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20width%3D%2214%22%20height%3D%2214%22%20viewBox%3D%220%200%2014%2014%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M2%205L7%209L12%205%22%20stroke%3D%22black%22%20stroke-width%3D%222%22%20stroke-linecap%3D%22round%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right .7em top 50%;
+  background-size: .65em auto;
+}
+
+input.small, .input-select.small {
+  padding: var(--margin-sm);
+}
 .react-select .react-select__control {
   color:var(--color-black);
   border: 0px;
@@ -1570,6 +1717,9 @@ input[type="text"]:hover, input[type="email"]:hover, input[type="url"]:hover, in
   color: var(--color-black);
   border: 0px;
   background: var(--color-blue);
+}
+input::placeholder:hover {
+  color: var(--color-black);
 }
 .react-select .react-select__control:hover, .react-select .react-select__control--is-focused {
   background: var(--color-blue);
@@ -1622,14 +1772,17 @@ input[type="checkbox"] {
   border-radius: 2px;
 }
 input[type="checkbox"]:checked {
-  background: var(--color-yellow);
-  border: var(--border) var(--color-yellow);
+  background: var(--color-yellow-stable);
+  border: var(--border) var(--color-yellow-stable);
 }
 
 /* mailing list */
 .test-fonts__form {
   display: grid;
   gap: var(--padding-sm);
+}
+.test-fonts__form label {
+  text-wrap: balance;
 }
 .test-fonts__form > div {
   margin-bottom: 0px;
@@ -1640,9 +1793,8 @@ input[type="checkbox"]:checked {
 }
 
 .test-fonts__checkbox-field {
-  grid-column: span 2;
   display: flex;
-  gap: var(--padding-xxs);
+  gap: var(--padding-xs);
 }
 
 .checkbox {
@@ -1661,7 +1813,7 @@ input[type="checkbox"]:checked {
 .checkbox:has(input:checked) ~ label {
   color: var(--color-black);
 }
-.text-field__label-wrapper, .react-select__label-wrapper  {
+.text-field__label-wrapper, .react-select__label-wrapper, .text-field__label  {
   color: var(--color-black);
   font-family: var(--font-family-eyebrow);
   text-transform: uppercase;
